# EMBEDDED_LINUX

./: README.md
Embedded_Linux_Drivers/Buildroot_Project/: README.md
Embedded_Linux_Drivers/Buildroot_Project/board/mytarget/: initramfs-init  post-build.sh  users.txt
Embedded_Linux_Drivers/Buildroot_Project/images/: image_drive_install.txt
Embedded_Linux_Project/: README.md
Embedded_Linux_Project/GUI/: README.md
Embedded_Linux_Project/GUI/Server_GUI/: CMakeLists.txt  chart.qml  configuration.cpp  configuration.hpp  historicalAnalysis.cpp  historicalAnalysis.hpp  mainwindow.cpp  mainwindow.h  quickAccess.cpp  quickAccess.hpp  realTimeMonitor.cpp  realTimeMonitor.hpp  resources.qrc
Embedded_Linux_Project/GUI/Server_GUI/Include/: UDPsocket.hpp
Embedded_Linux_Project/GUI/Server_Gui/: CMakeLists.txt  main.cpp  mainwindow.cpp
Embedded_Linux_Project/GUI/Server_Gui/Include/: serverChannel.hpp
Embedded_Linux_Project/GUI/Server_Gui/Resources/qml/: chart.qml  meter.qml
Embedded_Linux_Project/Server_Gui/: CMakeLists.txt
Embedded_Linux_Project/Socket Programming Drivers/: README.md
Embedded_Linux_Project/Socket Programming Drivers/Include/: socket.hpp
Embedded_Linux_Project/Socket Programming Drivers/Source/: UDPsocket.cpp  client.cpp  server.cpp  serverChannel.cpp
Embedded_Linux_Project/Yocto Image/: README.md
Linux_Administration/Bash_Scripts/: ch1.sh  ch2.sh  ch3.sh  lab1.sh  lab10.sh  lab11.sh  lab12.sh  lab2.sh  lab3.sh  lab4.sh  lab5.sh  lab6.sh  lab7.sh  lab8.sh  lab9.sh  test.sh
Linux_Administration/Project/: README.md
Linux_Administration/Project/Part1/: Questions.txt  README.md  dir_files_manager.sh  userdef.sh
Linux_Administration/Project/Part2/: README.md
Linux_Administration/Project/Part2/Application/: CMakeLists.txt  Makefile  output
Linux_Administration/Project/Part2/Modules/caesar_cipher/: CMakeLists.txt  caesar_cipher.mk
Linux_Administration/Project/Part2/Modules/caesar_cipher/src/: caesar_decrypt.c  caesar_encrypt.c
Linux_Administration/Project/Part2/Modules/xor_cipher/: CMakeLists.txt  xor_cipher.mk
Linux_Administration/Project/Part2/Modules/xor_cipher/src/: xor_decrypt.c  xor_encrypt.c
Linux_Administration/Project/Part3/: CMakeLists.txt  README.md
Linux_Administration/Project/Part3/Source/: main.c
